GNOME Bugzilla – Bug 740815
gstbasecamerasrc : fix typo
Last modified: 2014-11-28 00:15:07 UTC
Created attachment 291672 [details] [review] typo error in comment. typo error in comment.
Thanks, pushed: commit d6489ee96c45d64401b65c10ea39755416db5e54 Author: Danny Song <danny.song.ga@gmail.com> Date: Fri Nov 28 02:21:49 2014 +0900 basecamerasrc: fix typo in docs https://bugzilla.gnome.org/show_bug.cgi?id=740815