basecamerasrc: fix typo in docs

https://bugzilla.gnome.org/show_bug.cgi?id=740815